<resources>
    <string name="app_name">TelegramTask</string>
    <string name="account_text">Account</string>
    <string name="user_number">+20 1026542665</string>
    <string name="change_number">Tap to change</string>
    <string name="user_name">MuhamedSultan</string>
    <string name="text_username">Username</string>
    <string name="bio">Bio</string>
    <string name="details_about_user">Add a few words about yourself</string>
    <string name="text_settings">Settings</string>
    <string name="chatsetting">chatSetting</string>
    <string name="privacy">Privacy and Security</string>
    <string name="notifications">Notifications and Sounds</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="powersaving">powerSaving</string>
    <string name="chatfolders">ChatFolders</string>
    <string name="device">Device</string>
    <string name="language">Language</string>
    <string name="telegrampremium">TelegramPremium</string>
    <string name="help">Help</string>
    <string name="ask_a_ouestion">Ask a Ouestion</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="privacypolicy">privacyPolicy</string>
    <string name="language_type">English</string>
</resources>